2004-09-14  Dom Lachowicz <cinamod@hotmail.com>

	* io-svg.c: Only emit prepared() once, add more mime-types and
	file extensions, and (optionally) simulate progressive loading
	
2004-09-10  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.[ch]: rsvg_init(), rsvg_term(). Cuts down on libxml2 memory leaks
	* test-*.c: Use above fns
	
2004-08-31  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-text.c: made text not cause crashes

2004-08-30  Dom Lachowicz <cinamod@hotmail.com>

	* test-display.c: Ability to copy the current SVG's URI or file path
	
2004-08-28  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-css.c: Something closer to correct for ex-height
	
2004-08-28  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-shapes.c: added an optional clippath around svg elements

2004-08-27  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-shapes.c: Implemented preserveAspectRatio as per the standard
	* rsvg-shapes.c: Implemented <symbols>s

2004-08-22  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c, rsvg.h, rsvg-private.h: Return metadata to caller if requested
	* rsvg-private.h: Compiler hints to de-bloat the RsvgState struct
	
2004-08-22  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-shapes.c: made <image>s <use>able
	* rsvg.c, rsvg-shapes.c: I've been talking about it for a while now, but I finally got the courage to do it: librsvg now fully passes the contents of the file before it renders a single pixel. 

2004-08-21  Caleb Moore <c.moore@student.unsw.edu.au>

	* prettymuch-everywhere: made the majority compile with -ansi -pedantic
	* rsvg-styles.c: little hack to make background generation for filters 
	work a little better

2004-08-13  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-styles.c: Fix memory leak in the new "state stack thingie".
	* rsvg.c: Use a GMemChunk to (marginally) speed up state allocation
	
2004-08-13  Caleb Moore <c.moore@student.unsw.edu.au>

	* prettymuch-everywhere: Huge number of small bugfixes